# SpaceShooter

./: CMakeLists.txt  README.md
Libraries/SDL/: CMakeLists.txt
Source/: BackGround.cpp  BackGround.h  Defines.h  DeltaTime.h  EnemySpawner.cpp  EnemySpawner.h  EnemySpawner.inl  FontRenderer.cpp  FontRenderer.h  Game.cpp  Game.h  Game.inl  GameScene.cpp  GameScene.h  Globals.cpp  Globals.h  HighScore.cpp  HighScore.h  HighScoreScene.cpp  HighScoreScene.h  Main.cpp  MainMenu.cpp  MainMenu.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  SoundLoader.cpp  SoundLoader.h  Sprite.cpp  Sprite.h  SpriteLoader.cpp  SpriteLoader.h  TextInput.cpp  TextInput.h  TextInputScene.cpp  TextInputScene.h  TextRenderer.cpp  TextRenderer.h  Timer.cpp  (+1 more)
Source/Entities/: BigEnemy.cpp  BigEnemy.h  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Explosion.cpp  Explosion.h  FireRateOverloadPowerUp.cpp  FireRateOverloadPowerup.h  KillShotPowerUp.cpp  KillShotPowerUp.h  MediumEnemy.cpp  MediumEnemy.h  PhysicsEntity.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  SmallEnemy.h
